[package]
name = "cargo-mod-deps"
version = "0.1.0"
authors = ["mi_sawa <mi.sawa.1216+git@gmail.com>", "shino16 <masatosinokawa@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.32"
clap = "2.33.1"
rls-analysis = "0.18.1"
rls-data = "0.19.0"
serde_json = "1.0.57"

[patch.crates-io]
rls-analysis = { git = "https://github.com/shino16/rls.git", branch = "expose-more-things" }
rls-data = { git = "https://github.com/shino16/rls.git", branch = "expose-more-things" }
